log
Thu 09 May 2024 09:17:12 PM UTC: 
 tests:  1|8
total_score: 0/70
98a44d4
Thu 09 May 2024 09:38:45 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c:51:5: error: expected identifier or ‘(’ before ‘return’
   51 |     return NULL;
      |     ^~~~~~
treemap.c:52:1: error: expected identifier or ‘(’ before ‘}’ token
   52 | }
      | ^
Compilation failed
9d38911
Thu 09 May 2024 09:38:58 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c:51:1: error: expected identifier or ‘(’ before ‘}’ token
   51 | }
      | ^
Compilation failed
02bd1b8
Thu 09 May 2024 09:39:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
931d88e
Thu 09 May 2024 09:39:32 PM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
125195b
Thu 09 May 2024 09:46:41 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:13: error: expected expression before ‘}’ token
   63 |             }
      |             ^
Compilation failed
bf958a8
